src/test/ui/borrowck/borrowck-if-no-else.stderr
error[E0381]: use of possibly uninitialized variable: `x`
  --> $DIR/borrowck-if-no-else.rs:5:9
   |
LL |     foo(x);
   |         ^ use of possibly uninitialized `x`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
